--- a/ansible/roles/project_solr_openshift/templates/project_solr_service.yml
+++ b/ansible/roles/project_solr_openshift/templates/project_solr_service.yml
@@ -14,7 +14,7 @@ spec:
       protocol: TCP
       targetPort: 8983
   selector:
-    app: computate-solr
-    deploymentconfig: computate-solr
+    app: solr
+    deploymentconfig: solr
   sessionAffinity: None
   type: ClusterIP
