--- a/ansible/roles/project_solr_openshift/defaults/main.yml
+++ b/ansible/roles/project_solr_openshift/defaults/main.yml
@@ -14,3 +14,5 @@ SSL_JKS_BASE64: "{{ lookup('file', '{{ SSL_JKS_PATH }}') | b64encode }}"
 SOLR_OPT: /opt/solr
 PROJECT_ANSIBLE_INVENTORY: /usr/local/src/computate.org-ansible
 REDHAT_OPENSHIFT_STORAGE_CLASS_NAME: gp2
+ENABLE_SOLR_SSL: false
+ENABLE_SOLR_BASIC_AUTH: false
